src/components/SlotsMachine4/SlotsMachine4.module.css
.main {
  width: 100%;
  min-height: 100vh;
  display: flex;
  gap: 2rem;
  padding: 4rem 0;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  background: linear-gradient(
    to bottom,
    #fff 0%,
    #f996b6 15.9003%,
    #f99cba 25%,
    #fddbe6 100%,
    #faafc7 100%,
    #f99cba 80%,
    #fcd1df 100%
  );
}
.slotDiv {
  position: relative;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
}
.slotCanvas {
  width: 35rem;
  position: relative;
  z-index: 999;
}
.Sbg {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 80%;
  z-index: 0;
}
.resultDiv {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: transparent;
  backdrop-filter: blur(20px);
  z-index: 999999;
  display: flex;
  gap: 1.5rem;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}
.topDiv {
  width: 30rem;
  min-height: 30rem;
  gap: 1rem;
  background-color: #fff;
  display: flex;
  text-align: center;
  align-items: center;
  justify-content: space-between;
  flex-direction: column;
}
.botDiv {
  width: 30rem;
  height: 6rem;
  background-color: #fff;
  display: flex;
  gap: 1rem;
  align-items: center;
  justify-content: center;
  text-align: center;
  flex-direction: column;
}

@media only screen and (max-width: 800px) {
  .resultDiv {
    width: 100%;
    height: 100%;
    width: 90%;
  }
  .topDiv {
    width: 100%;
  }
  .botDiv {
    width: 100%;
    padding: 4rem 0;
  }
  .slotCanvas{
    width: 23rem;
  }
  .itemCont{
    width: 75% !important;
  }
}

.socialDiv {
  display: flex;
  gap: 1rem;
  align-items: center;
  justify-content: center;
}
.resultcont {
  width: 30rem;
  height: 15rem;
  background-color: #f996b6;
  border: 10px solid #fff;
  border-radius: 4rem;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  gap: 3rem;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  box-shadow: 0px 0px 55px 10px rgba(240, 240, 240, 0.75);
}
.itemDiv {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  z-index: 9;
  transition: transform 1s ease-out;
}
.itemCont {
  display: flex;
  gap: 2rem;
  align-items: center;
  justify-content: center;
  position: absolute;

  bottom: 30%;
  width: 100%;
}
.item {
  width: 7rem;
}
.SBtn {
  background: linear-gradient(to right, #960000 0%, #d40000 11%, #c20000 53%, #f70000 100%);
  color: #fff;
  padding: 1rem 3rem 1rem 3rem;
  border-radius: 0.5rem;
  font-size: 1.3rem;
}
/*------------------------------------start Animation ----------------------*/
@keyframes moveDown {
  to {
    transform: translateY(640px); /* Adjust the distance as needed */
  }
}
@keyframes moveDown1 {
  0% {
    transform: translateY(-150px); /* Adjust the distance as needed */
  }
  100% {
    transform: translateY(5px); /* Adjust the distance as needed */
  }
}
.animate0 {
  animation: moveDown 1s forwards;
  filter: blur(5px);
}

.animate1 {
  animation: moveDown 1s forwards;
  animation-delay: 0.3s;
  filter: blur(5px);
}

.animate2 {
  animation: moveDown 1s forwards;
  animation-delay: 0.6s;
  filter: blur(5px);
}
.animate3 {
  animation: moveDown 0.5s forwards infinite;
  filter: blur(5px);
}
.animate333 {
  animation: moveDown1 0.5s forwards;
}
.animate4 {
  animation: moveDown 0.5s forwards infinite;
  animation-delay: 0.3s;
  filter: blur(5px);
}
.animate5 {
  animation: moveDown 0.5s forwards infinite;
  animation-delay: 0.6s;
  filter: blur(5px);
}
.animate33 {
  animation: moveDown 1s forwards infinite;
  filter: blur(5px);
}
.animate44 {
  animation: moveDown 1s forwards infinite;
  animation-delay: 0.3s;
  filter: blur(5px);
}
.animate55 {
  animation: moveDown 1s forwards infinite;
  animation-delay: 0.6s;
  filter: blur(5px);
}

